[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { path = "../bevy" }
rand = "0.8"

[patch.crates-io]
bevy = { path = "../bevy" }
